Add template helper for getting the url of formatted image

--- a/Resources/views/ngremotemedia_content_field.html.twig
+++ b/Resources/views/ngremotemedia_content_field.html.twig
@@ -1,6 +1,10 @@
 {% block ngremotemedia_field %}
-    <img src="{{ field.value.secure_url }}"
+
+    <img src="{{ netgen_remote_media(field, fieldSettings, 'T1') }}"
+         {#
             {% if field.value.width is defined %} width="{{ field.value.width }}"{% endif %}
             {% if field.value.height is defined %} height="{{ field.value.height }}"{% endif %}
+        #}
          {#alt="{{ field.value.alternativeText }}"#} />
+
 {% endblock %}
