Change twig folder for ezexceed

--- a/Resources/views/ezexceed/edit/action_button.html.twig
+++ b/Resources/views/ezexceed/edit/action_button.html.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain "ezexceed" %}
+
 {% set contentClassAttribute = attribute.attribute('contentclass_attribute') %}
 {% set variations = contentClassAttribute.attribute('data_text4') %}
 
