--- a/ezpublish_legacy/ngremotemedia/design/ezexceed/stylesheets/ngremotemedia.css
+++ b/ezpublish_legacy/ngremotemedia/design/ezexceed/stylesheets/ngremotemedia.css
@@ -235,7 +235,37 @@
     background: white;
     border-bottom-left-radius: 4px;
     color: black; }
-.eze .eze-object-attributes .ngremotemedia .ngremotemedia-tags {
+.eze .eze-object-attributes .ngremotemedia .remotemedia-tags {
   clear: both; }
+.eze .eze-object-attributes .ngremotemedia .add-tag {
+  position: relative;
+  clear: both; }
+  .eze .eze-object-attributes .ngremotemedia .add-tag .btn {
+    position: absolute;
+    display: block;
+    top: 0;
+    right: 0;
+    margin: 0;
+    z-index: 2; }
+  .eze .eze-object-attributes .ngremotemedia .add-tag input {
+    box-sizing: border-box;
+    height: auto;
+    width: 100%; }
+.eze .eze-object-attributes .ngremotemedia .tags .label {
+  padding: 2px 6px;
+  font-size: 11px;
+  display: block;
+  float: left;
+  margin: 0 5px 5px 0;
+  background: #666666; }
+.eze .eze-object-attributes .ngremotemedia .tags .close {
+  font-weight: 100;
+  font-size: 14px;
+  float: none;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  font-size: 16px;
+  margin: -6px 0 0 2px;
+  color: white; }
 
 /*# sourceMappingURL=ngremotemedia.css.map */
