--- a/ezpublish_legacy/ngremotemedia/design/ezexceed/stylesheets/ngremotemedia.scss
+++ b/ezpublish_legacy/ngremotemedia/design/ezexceed/stylesheets/ngremotemedia.scss
@@ -356,9 +356,50 @@
           color: black;
         }
       }
-      .ngremotemedia-tags {
+      .remotemedia-tags {
         clear: both;
       }
+
+      .add-tag {
+        position: relative;
+        clear: both;
+        .btn {
+          position: absolute;
+          display: block;
+          top: 0;
+          right: 0;
+          margin: 0;
+          z-index: 2;
+        }
+        input {
+          box-sizing: border-box;
+          height: auto;
+          width: 100%;
+        }
+      }
+
+      .tags {
+        .label {
+          padding: 2px 6px;
+          font-size: 11px;
+          display: block;
+          float: left;
+          margin: 0 5px 5px 0;
+          background: #666666;
+        }
+        .close {
+          font-weight: 100;
+          font-size: 14px;
+          float: none;
+          opacity: 1;
+          filter: alpha(opacity = 100);
+          font-size: 16px;
+          margin: -6px 0 0 2px;
+          color: white;
+        }
+      }
+
+      
     }
   }
 }
