--- a/Resources/views/ngremotemedia_content_field.html.twig
+++ b/Resources/views/ngremotemedia_content_field.html.twig
@@ -8,25 +8,31 @@
  #}
 {% block ngremotemedia_field %}
     {% set format = parameters.format|default('800x400') %}
-    {% if parameters.alt_text is defined and parameters.alt_text is not empty %}
-        {% set alt_text = parameters.alt_text %}
-    {% else %}
-        {% set alt_text = field.value.metaData.alt_text|default('') %}
-    {% endif %}
-    {% if parameters.title is defined and parameters.title is not empty %}
-        {% set title = parameters.title %}
-    {% else %}
-        {% set title = field.value.metaData.caption|default('') %}
-    {% endif %}
+    {% set resourceType = field.value.metaData.resource_type|default('image') %}
 
-    {% set variation = netgen_remote_media(field.value, fieldSettings.formats, format) %}
+    {% if resourceType == 'image' %}
+        {% if parameters.alt_text is defined and parameters.alt_text is not empty %}
+            {% set alt_text = parameters.alt_text %}
+        {% else %}
+            {% set alt_text = field.value.metaData.alt_text|default('') %}
+        {% endif %}
+        {% if parameters.title is defined and parameters.title is not empty %}
+            {% set title = parameters.title %}
+        {% else %}
+            {% set title = field.value.metaData.caption|default('') %}
+        {% endif %}
 
-    <img src="{{ variation.url }}"
-        {% if variation.width is not empty %} width="{{ variation.width }}"{% endif %}
-        {% if variation.height is not empty %} height="{{ variation.height }}"{% endif %}
-        {% if alt_text is not empty %}alt="{{ alt_text }}"{% endif %}
-        {% if title is not empty %}title="{{ title }}"{% endif %}
-        {{ block( 'field_attributes' ) }}
-    />
+        {% set variation = netgen_remote_media(field.value, fieldSettings.formats, format) %}
+
+        <img src="{{ variation.url }}"
+            {% if variation.width is not empty %} width="{{ variation.width }}"{% endif %}
+            {% if variation.height is not empty %} height="{{ variation.height }}"{% endif %}
+            {% if alt_text is not empty %}alt="{{ alt_text }}"{% endif %}
+            {% if title is not empty %}title="{{ title }}"{% endif %}
+            {{ block( 'field_attributes' ) }}
+        />
+    {% else %}
+        {{ netgen_remote_video(field.value, format, fieldSettings.formats )|raw }}
+    {% endif %}
 
 {% endblock %}
