--- a/Resources/views/ezexceed/test/ngremotemedia.html.twig
+++ b/Resources/views/ezexceed/test/ngremotemedia.html.twig
@@ -1,6 +1,10 @@
 {% trans_default_domain "ezexceed" %}
 
-{% set media = netgen_remote_media(value, ['Small', 'Medium', 'Big'], '300x200') %}
+{% set resourceType = value.metaData.resource_type|default('image') %}
+
+{% if resourceType == 'image' %}
+    {% set media = netgen_remote_media(value, ['Small', 'Medium', 'Big'], '300x200') %}
+{% endif %}
 
 {% set attribute_base = "ContentObjectAttribute" %}
 
@@ -11,19 +15,12 @@
         "remotemedia" : "/extension/ngremotemedia/design/ezexceed/javascript/",
         "brightcove" : "/extension/ngremotemedia/design/standard/javascript/libs/BrightcoveExperiences"
     }'
-    data-bootstrap='{{ media|json_encode }}'
+    data-bootstrap='{{ value|json_encode }}'
 >
 
-{#
-{if and( $media, $handler.mediaFits|not )}
-<p class="error">{'The uploaded media might be too small for this format'|i18n('remotemedia')}</p>
-{/if}
-#}
-
-<input type="hidden" name="{{ attribute_base }}_media_id_{{ fieldId }}" value="{{ value.resourceId }}" class="media-id data"/>
-{#<input type="hidden" name="{$attribute_base}_host_{$attribute.id}" value="{$media.host}" class="media-host data"/>#}
-{#<input type="hidden" name="{$attribute_base}_type_{$attribute.id}" value="{$media.type}" class="media-type data"/>#}
-{#<input type="hidden" name="{$attribute_base}_ending_{$attribute.id}" value="{$media.ending}" class="media-ending data"/>#}
+    {% if resourceType == 'image' and not netgen_remote_media_fits(value, availableFormats) %}
+        <p class="error">{{ "ngremotemedia.edit.media_too_small"|trans }}</p>
+    {% endif %}
 
 {% if media %}
 <div class="eze-image">
