--- a/Resources/views/ezexceed/test/ngremotemedia.html.twig
+++ b/Resources/views/ezexceed/test/ngremotemedia.html.twig
@@ -22,38 +22,40 @@
         <p class="error">{{ "ngremotemedia.edit.media_too_small"|trans }}</p>
     {% endif %}
 
-{% if media %}
-<div class="eze-image">
+    <input type="hidden" name="{{ attribute_base }}_media_id_{{ fieldId }}" value="{{ value.resourceId }}" class="media-id data"/>
 
     {% if value.resourceId %}
-        {% include "NetgenRemoteMediaBundle:ezexceed/test:preview.html.twig" %}
+    <div class="eze-image">
+
+        {% if value.resourceId %}
+            {% include "NetgenRemoteMediaBundle:ezexceed/test:preview.html.twig" %}
+        {% endif %}
+
+        <div class="remotemedia-alttext">
+            <span class="help-block description">{{ 'ngremotemedia.edit.alt_text'|trans }}</span>
+            <input type="text"
+                   name="{{ attribute_base }}_alttext_{{ fieldId }}" value="{{ value.metaData.alt_text }}" class="media-alttext data">
+        </div>
+        <div class="remotemedia-tags">
+            <div class="input-append add-tag">
+                <input type="text" class="tag" placeholder="{{ 'ngremotemedia.edit.tag.write'|trans }}" data-autosave="off">
+                <button class="btn tag" disabled type="button">{{ 'ngremotemedia.edit.tag.add'|trans }}</button>
+            </div>
+            <div class="tags"></div>
+        </div>
+    </div>
     {% endif %}
 
-    <div class="remotemedia-alttext">
-        <span class="help-block description">{{ 'ngremotemedia.edit.alt_text'|trans }}</span>
-        <input type="text"
-               name="{{ attribute_base }}_alttext_{{ fieldId }}" value="{{ value.metaData.alt_text }}" class="media-alttext data">
-    </div>
-    <div class="remotemedia-tags">
-        <div class="input-append add-tag">
-            <input type="text" class="tag" placeholder="{{ 'ngremotemedia.edit.tag.write'|trans }}" data-autosave="off">
-            <button class="btn tag" disabled type="button">{{ 'ngremotemedia.edit.tag.add'|trans }}</button>
-        </div>
-        <div class="tags"></div>
-    </div>
-</div>
-{% endif %}
-
-<div class="eze-no-image">
-    <button type="button" class="btn from-remotemedia">
-        {{ 'ngremotemedia.edit.browse'|trans }}
-    </button>
-    <span class="upload-container" id="remotemedia-local-file-container-{{ fieldId }}">
-        <button type="button" class="btn upload-from-disk"
-                id="remotemedia-local-file-{{ fieldId }}">
-            {{ 'ngremotemedia.edit.upload'|trans }}
+    <div class="eze-no-image">
+        <button type="button" class="btn from-remotemedia">
+            {{ 'ngremotemedia.edit.browse'|trans }}
         </button>
-        <div class="upload-progress hide"><div class="progress"></div></div>
-    </span>
-</div>
+        <span class="upload-container" id="remotemedia-local-file-container-{{ fieldId }}">
+            <button type="button" class="btn upload-from-disk"
+                    id="remotemedia-local-file-{{ fieldId }}">
+                {{ 'ngremotemedia.edit.upload'|trans }}
+            </button>
+            <div class="upload-progress hide"><div class="progress"></div></div>
+        </span>
+    </div>
 </div>
