Remove brightcove from templates

--- a/Resources/views/ezexceed/edit/ngremotemedia.html.twig
+++ b/Resources/views/ezexceed/edit/ngremotemedia.html.twig
@@ -9,8 +9,7 @@
      data-handler='remotemedia/remotemedia'
      data-url-root="/"
      data-paths='{
-        "remotemedia" : "/extension/ngremotemedia/design/ezexceed/javascript/",
-        "brightcove" : "/extension/ngremotemedia/design/standard/javascript/libs/BrightcoveExperiences"
+        "remotemedia" : "/extension/ngremotemedia/design/ezexceed/javascript/"
     }'
     data-bootstrap='{{ media|json_encode }}'
 >
