--- a/Resources/views/ezexceed/test/ngremotemedia.html.twig
+++ b/Resources/views/ezexceed/test/ngremotemedia.html.twig
@@ -12,8 +12,7 @@
      data-handler='remotemedia/remotemedia'
      data-url-root="/"
      data-paths='{
-        "remotemedia" : "/extension/ngremotemedia/design/ezexceed/javascript/",
-        "brightcove" : "/extension/ngremotemedia/design/standard/javascript/libs/BrightcoveExperiences"
+        "remotemedia" : "/extension/ngremotemedia/design/ezexceed/javascript/"
     }'
     data-bootstrap='{{ value|json_encode }}'
 >
