--- a/Resources/views/ezexceed/edit/ngremotemedia.html.twig
+++ b/Resources/views/ezexceed/edit/ngremotemedia.html.twig
@@ -1,7 +1,10 @@
 {% trans_default_domain "ezexceed" %}
 
-{% set value = attribute.content %}
-{% set media = netgen_remote_media(value, ['Small', 'Medium', 'Big'], '300x200') %}
+{% set resourceType = value.metaData.resource_type|default('image') %}
+
+{% if resourceType == 'image' %}
+    {% set media = netgen_remote_media(value, availableFormats, '300x200') %}
+{% endif %}
 
 {% set attribute_base = "ContentObjectAttribute" %}
 
@@ -11,50 +14,47 @@
      data-paths='{
         "remotemedia" : "/extension/ngremotemedia/design/ezexceed/javascript/"
     }'
-    data-bootstrap='{{ media|json_encode }}'
+    data-bootstrap='{{ value|json_encode }}'
 >
 
-{#
-{if and( $media, $handler.mediaFits|not )}
-<p class="error">{'The uploaded media might be too small for this format'|i18n('remotemedia')}</p>
-{/if}
-#}
+    {% if value.resourceId and resourceType == 'image' and not netgen_remote_media_fits(value, availableFormats) %}
+        <p class="error">{{ "ngremotemedia.edit.media_too_small"|trans }}</p>
+    {% endif %}
 
-<input type="hidden" name="{{ attribute_base }}_media_id_{{ attribute.attribute('id') }}" value="{{ value.resourceId }}" class="media-id data"/>
-{#<input type="hidden" name="{$attribute_base}_host_{$attribute.id}" value="{$media.host}" class="media-host data"/>#}
-{#<input type="hidden" name="{$attribute_base}_type_{$attribute.id}" value="{$media.type}" class="media-type data"/>#}
-{#<input type="hidden" name="{$attribute_base}_ending_{$attribute.id}" value="{$media.ending}" class="media-ending data"/>#}
+    <input type="hidden" name="{{ attribute_base }}_media_id_{{ fieldId }}" value="{{ value.resourceId }}" class="media-id data"/>
 
-{% if media %}
-<div class="eze-image">
+    {% if value.resourceId %}
+    <div class="eze-image">
 
-    {% include "NetgenRemoteMediaBundle:ezexceed/edit:preview.html.twig" %}
+        {% if value.resourceId %}
+            {% include "NetgenRemoteMediaBundle:ezexceed/edit:preview.html.twig" %}
+        {% endif %}
 
-    <div class="remotemedia-alttext">
-        <span class="help-block description">{{ 'ngremotemedia.edit.alt_text'|trans }}</span>
-        <input type="text"
-               name="{{ attribute_base }}_alttext_{{ attribute.attribute('id') }}" value="{{ value.metaData.alt_text }}" class="media-alttext data">
-    </div>
-    <div class="remotemedia-tags">
-        <div class="input-append add-tag">
-            <input type="text" class="tag" placeholder="{{ 'ngremotemedia.edit.tag.write'|trans }}" data-autosave="off">
-            <button class="btn tag" disabled type="button">{{ 'ngremotemedia.edit.tag.add'|trans }}</button>
+        <div class="remotemedia-alttext">
+            <span class="help-block description">{{ 'ngremotemedia.edit.alt_text'|trans }}</span>
+            <input type="text"
+                   name="{{ attribute_base }}_alttext_{{ fieldId }}" value="{{ value.metaData.alt_text }}" class="media-alttext data">
         </div>
-        <div class="tags"></div>
+        <div class="remotemedia-tags">
+            <div class="input-append add-tag">
+                <input type="text" class="tag" placeholder="{{ 'ngremotemedia.edit.tag.write'|trans }}" data-autosave="off">
+                <button class="btn tag" disabled type="button">{{ 'ngremotemedia.edit.tag.add'|trans }}</button>
+            </div>
+            <div class="tags"></div>
+        </div>
     </div>
-</div>
-{% endif %}
+    {% endif %}
 
-<div class="eze-no-image">
-    <button type="button" class="btn from-remotemedia">
-        {{ 'ngremotemedia.edit.browse'|trans }}
-    </button>
-    <span class="upload-container" id="remotemedia-local-file-container-{{ attribute.attribute('id') }}">
-        <button type="button" class="btn upload-from-disk"
-                id="remotemedia-local-file-{{ attribute.attribute('id') }}">
-            {{ 'ngremotemedia.edit.upload'|trans }}
+    <div class="eze-no-image">
+        <button type="button" class="btn from-remotemedia">
+            {{ 'ngremotemedia.edit.browse'|trans }}
         </button>
-        <div class="upload-progress hide"><div class="progress"></div></div>
-    </span>
-</div>
+        <span class="upload-container" id="remotemedia-local-file-container-{{ fieldId }}">
+            <button type="button" class="btn upload-from-disk"
+                    id="remotemedia-local-file-{{ fieldId }}">
+                {{ 'ngremotemedia.edit.upload'|trans }}
+            </button>
+            <div class="upload-progress hide"><div class="progress"></div></div>
+        </span>
+    </div>
 </div>
