--- a/Resources/views/ezexceed/edit/preview.html.twig
+++ b/Resources/views/ezexceed/edit/preview.html.twig
@@ -1,13 +1,26 @@
 {% trans_default_domain "ezexceed" %}
 
-{% if media %}
-<div class="thumbnail">
-    <img src="{{ media.url }}" />
+{% set resourceType = value.metaData.resource_type|default('image') %}
 
-    <button type="button" class="close remove"
-            name="CustomActionButton[{{ attribute.attribute('id') }}_delete_media]"
-            value="{{ 'ngremotemedia.edit.remove'|trans }}">×</button>
+{% if resourceType == 'image' and media %}
+    <div class="thumbnail">
+        <img src="{{ media.url }}" />
 
-    {% include "NetgenRemoteMediaBundle:ezexceed/edit:action_button.html.twig" %}
-</div>
+        <button type="button" class="close remove"
+                name="CustomActionButton[{{ fieldId }}_delete_media]"
+                value="{{ 'ngremotemedia.edit.remove'|trans }}">×</button>
+
+        {% include "NetgenRemoteMediaBundle:ezexceed/edit:action_button.html.twig" %}
+    </div>
+{% elseif resourceType == 'video' %}
+    {% set thumb = netgen_remote_thumbnail(value) %}
+
+    <div class="thumbnail">
+        <img src="{{ thumb }}" />
+
+        <button type="button" class="close remove"
+                name="CustomActionButton[{{ fieldId }}_delete_media]"
+                value="{{ 'ngremotemedia.edit.remove'|trans }}">×</button>
+    </div>
+
 {% endif %}
