--- a/Resources/views/ngremotemedia_content_field.html.twig
+++ b/Resources/views/ngremotemedia_content_field.html.twig
@@ -7,7 +7,7 @@
  # - string title: used as title if set, otherwise caption from the image is used
  #}
 {% block ngremotemedia_field %}
-    {% set format = parameters.format|default('800x400') %}
+    {% set format = parameters.format|default('') %}
     {% set resourceType = field.value.metaData.resource_type|default('image') %}
 
     {% if resourceType == 'image' %}
@@ -22,12 +22,22 @@
             {% set title = field.value.metaData.caption|default('') %}
         {% endif %}
 
-        {% set variation = netgen_remote_media(field.value, fieldSettings.formats, format) %}
+        {% if format is not empty %}
+            {% set variation = netgen_remote_media(field.value, fieldSettings.formats, format) %}
+        {% endif %}
 
-        {% if variation.url %}
+        {% if variation is defined and variation.url%}
             <img src="{{ variation.url }}"
                 {% if variation.width is not empty %} width="{{ variation.width }}"{% endif %}
                 {% if variation.height is not empty %} height="{{ variation.height }}"{% endif %}
+                {% if alt_text is not empty %}alt="{{ alt_text }}"{% endif %}
+                {% if title is not empty %}title="{{ title }}"{% endif %}
+                {{ block( 'field_attributes' ) }}
+            />
+        {% elseif field.value.secure_url is defined and field.value.secure_url is not empty %}
+            <img src="{{ field.value.secure_url }}"
+                {% if field.value.metaData.width is not empty %} width="{{ field.value.metaData.width }}"{% endif %}
+                {% if field.value.metaData.height is not empty %} height="{{ field.value.metaData.height }}"{% endif %}
                 {% if alt_text is not empty %}alt="{{ alt_text }}"{% endif %}
                 {% if title is not empty %}title="{{ title }}"{% endif %}
                 {{ block( 'field_attributes' ) }}
