Javascript - Merging administration, ezexceed, cleanup, bugfixes, optimization

--- a/Resources/views/ezexceed/edit/ngremotemedia.html.twig
+++ b/Resources/views/ezexceed/edit/ngremotemedia.html.twig
@@ -49,9 +49,8 @@
         <button type="button" class="btn from-remotemedia">
             {{ 'ngremotemedia.edit.browse'|trans }}
         </button>
-        <span class="upload-container" id="remotemedia-local-file-container-{{ fieldId }}">
-            <button type="button" class="btn upload-from-disk"
-                    id="remotemedia-local-file-{{ fieldId }}">
+        <span class="upload-container">
+            <button type="button" class="btn upload-from-disk">
                 {{ 'ngremotemedia.edit.upload'|trans }}
             </button>
             <div class="upload-progress hide"><div class="progress"></div></div>
