CSS: consolidate stylesheets, cleanup, add some ignores

--- a/Resources/views/ezexceed/edit/ngremotemedia.html.twig
+++ b/Resources/views/ezexceed/edit/ngremotemedia.html.twig
@@ -8,7 +8,7 @@
 
 {% set attribute_base = "ContentObjectAttribute" %}
 
-<div class="attribute-base"
+<div class="attribute-base remotemedia-type"
      data-handler='remotemedia/remotemedia'
      data-url-root="/"
      data-paths='{
