--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
@@ -1,114 +1,229 @@
-.remotemedia-buttons .upload-progress.hid {
-    display: none;
-}
-.image-wrap {
+/*********************
+  EzExceed & admin 
+**********************/
+.remotemedia-type .image-meta {
+  float: none;
+  overflow: hidden; }
+.remotemedia-type .title {
+  margin-bottom: 10px; }
+.remotemedia-type .help-block {
+  display: block;
+  margin: 0 0 5px; }
+.remotemedia-type .remotemedia-alttext {
+  clear: both;
+  margin-bottom: 10px; }
+.remotemedia-type .remotemedia-buttons {
+  clear: left; }
+.remotemedia-type .remotemedia-local-file-container {
+  display: inline; }
+.remotemedia-type .add-tag .btn {
+  padding: 0.3em 1em;
+  margin-left: 5px;
+  border-radius: 3px;
+  background: #5d7db1;
+  border: 1px solid #5d7db1;
+  box-shadow: 0 2px 0 #445c89;
+  color: #fff;
+  font-size: 1em;
+  -webkit-transition: ease all 0.3s;
+  -moz-transition: ease all 0.3s;
+  -o-transition: ease all 0.3s;
+  transition: ease all 0.3s; }
+  .remotemedia-type .add-tag .btn:hover, .remotemedia-type .add-tag .btn:focus {
+    background-color: rgba(0, 0, 0, 0.1);
+    color: black;
+    border: 1px solid #999;
+    outline: none; }
+.remotemedia-type .remotemedia-tags {
+  font-size: 12px; }
+.remotemedia-type .tags {
+  margin: 10px 0 5px; }
+  .remotemedia-type .tags .label {
+    position: relative;
+    display: inline-block;
+    margin: 0 8px 5px 0;
+    padding: 0.166em 1.5em 0.166em 0.65em;
+    font-size: 1em;
+    line-height: 1em;
+    background-color: #5673a5;
+    text-decoration: none;
+    border-radius: 4px;
+    color: #fff; }
+  .remotemedia-type .tags .close {
+    position: absolute;
+    right: 0.2em;
+    top: 50%;
+    -moz-transform: translate(0, -50%);
+    -o-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    float: none;
+    padding: 0 2px;
+    background: transparent;
+    color: #fff;
+    border: none;
+    box-shadow: none;
+    font-size: 1.09375em;
+    line-height: 1em;
+    vertical-align: text-top; }
+    .remotemedia-type .tags .close:focus {
+      outline: none; }
+.eze .remotemedia-type .thumbnail {
+  position: relative;
+  margin: 0 0 10px 0;
+  background: #fff;
+  float: left; }
+  .eze .remotemedia-type .thumbnail .edit-image {
+    position: absolute;
+    bottom: 10px;
+    left: 10px; }
+  .eze .remotemedia-type .thumbnail .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 4px 10px 8px 10px;
+    color: #fff;
+    opacity: 1; }
+  .eze .remotemedia-type .thumbnail:hover .close {
+    -webkit-transition: linear background-color 0.2s;
+    -moz-transition: linear background-color 0.2s;
+    -o-transition: linear background-color 0.2s;
+    transition: linear background-color 0.2s;
+    background: #fff;
+    border-bottom-left-radius: 4px;
+    color: #000; }
+.eze .remotemedia-type .add-tag {
+  position: relative; }
+  .eze .remotemedia-type .add-tag .btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 3px 10px 2px 10px;
+    z-index: 2;
+    font-size: 12px;
+    color: #333;
+    border: 1px solid #bbbbbb;
+    background: #f5f5f5;
+    background-repeat: repeat-x;
+    box-shadow: none;
+    background-image: linear-gradient(to bottom, #ffffff, #e6e6e6); }
+    .eze .remotemedia-type .add-tag .btn:hover, .eze .remotemedia-type .add-tag .btn:focus {
+      background-color: #e6e6e6;
+      background-position: 0 -15px;
+      -webkit-transition: linear background-position 0.1s;
+      -moz-transition: linear background-position 0.1s;
+      -o-transition: linear background-position 0.1s;
+      transition: linear background-position 0.1s; }
+    .eze .remotemedia-type .add-tag .btn[disabled] {
+      background-color: #e6e6e6;
+      opacity: 0.65;
+      background-image: none; }
+  .eze .remotemedia-type .add-tag input {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    height: auto; }
+.eze .remotemedia-type .tags .label {
+  padding: 0.2em 1.75em 0.2em 0.65em;
+  background: #666; }
+.eze .remotemedia-type .tags .close {
+  font-size: 1.25em;
+  opacity: 1;
+  filter: alpha(opacity=100); }
+
+.remotemedia-thumbs {
+  clear: both;
+  display: table; }
+  .remotemedia-thumbs .item {
     float: left;
-    margin: 0 15px 10px 0;
-}
+    width: 100%;
+    max-width: 180px;
+    cursor: pointer; }
+    .remotemedia-thumbs .item:hover img {
+      opacity: 1; }
+    .remotemedia-thumbs .item:nth-child(5n+6) {
+      clear: left; }
+    .remotemedia-thumbs .item img {
+      border: 1px solid #fff;
+      box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.4);
+      opacity: 0.9;
+      -webkit-transition: ease-in-out opacity 0.2s;
+      -moz-transition: ease-in-out opacity 0.2s;
+      -o-transition: ease-in-out opacity 0.2s;
+      transition: ease-in-out opacity 0.2s; }
+  .remotemedia-thumbs .pick {
+    display: block;
+    margin-top: 10px;
+    padding: 0 10px 0 10px; }
+  .remotemedia-thumbs .meta {
+    max-width: 160px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    margin-top: 5px; }
 
-.image-meta {
-    float: left;
-}
-
-    .image-meta ul {
-        margin: 0;
-        list-style-type: none
-    }
-
-    .tagger {
-        overflow: auto;
-        width: 100%;
-    }
-
-        .tagger h4 {
-            font-size: 14px;
-        }
-
-        .tagger ul {
-            margin-top: 10px;
-        }
-
-        .tagger li {
-            background: rgb(86,115,165);
-            text-decoration: none;
-            border-radius: 4px;
-            color: #fff;
-            display: block;
-            float: left;
-            font-size: 12px;
-            font-weight: normal;
-            height: 12px;
-            margin: 0 8px 5px 0;
-            padding: 3px 0 4px 6px;
-        }
-
-        .tagger li .remove a{
-            color: white;
-            font-weight: bold;
-            text-decoration: none;
-            font-size: 11px;
-            height: 14px;
-            margin: -2px -1px 0 5px;
-            padding: 2px 7px 0 5px;
-            text-align: center;
-        }
-
-.remotemedia-buttons {
-    clear: both;
-}
-
+.remotemedia-crop .nav-pills {
+  display: table;
+  clear: both;
+  margin: 0 0 20px;
+  list-style: none; }
+  .remotemedia-crop .nav-pills > li {
+    float: left; }
+    .remotemedia-crop .nav-pills > li.active a {
+      color: #000;
+      background-color: #ffbb00;
+      background-color: #ff8d00;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffbb00), to(#ff8d00));
+      background-image: -webkit-linear-gradient(top, #ffbb00, #ff8d00);
+      background-image: -moz-linear-gradient(top, #ffbb00, #ff8d00);
+      background-image: -ms-linear-gradient(top, #ffbb00, #ff8d00);
+      background-image: -o-linear-gradient(top, #ffbb00, #ff8d00);
+      background-image: linear-gradient(top, #ffbb00, #ff8d00);
+      border-color: transparent; }
+  .remotemedia-crop .nav-pills a {
+    display: block;
+    padding: 8px 12px;
+    margin: 0 2px;
+    color: #ccc;
+    border-radius: 5px;
+    background: transparent;
+    border: 1px solid #ccc;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out; }
+    .remotemedia-crop .nav-pills a:hover, .remotemedia-crop .nav-pills a:focus {
+      color: #b3b3b3;
+      border-color: #b3b3b3; }
 
 #remotemedia-modal {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    z-index: 1000;
-}
-
-.remotemedia-local-file-container {
-    display: inline
-}
-
-.remotemedia-buttons .upload-progress {
-    height: 5px;
-    width: 100px;
-    background: #ccc;
-    border-radius: 5px;
-    display: inline-block;
-}
-.remotemedia-buttons .progress {
-    height: 5px;
-    width : 0%;
-    background: green;
-    border-radius: 5px;
-}
-
-#remotemedia-modal .backdrop {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: 1000; }
+  #remotemedia-modal .backdrop {
     z-index: 100000;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background: white;
-    opacity: 0.6;
-}
-
-#remotemedia-modal .content {
+    background: #fff;
+    opacity: 0.6; }
+  #remotemedia-modal .content {
+    position: absolute;
     top: 50px;
     bottom: 25px;
     z-index: 200000;
-    position: absolute;
+    padding: 40px;
     border-radius: 4px;
     width: 920px;
     left: 50%;
-    overflow-y: scroll;
     margin-left: -460px;
-    background: #000;
-    font: normal 14px/14px Helvetica, Arial, sans-serif;
-}
-
-#remotemedia-modal .close {
+    background-color: #000;
+    font: normal 14px/14px Helvetica, Arial, sans-serif; }
+  #remotemedia-modal .close {
     background: #fff url(close.png) center center no-repeat;
     height: 20px;
     width: 20px;
@@ -117,267 +232,30 @@
     text-indent: -99999px;
     position: absolute;
     top: 10px;
-    right: 10px;
-}
-
-
-/* End Vanilla Attribute */
-
-#remotemedia-scaler .header, #remotemedia-browser .header {
-    float: left;
-    margin: 0;
-    padding: 10px;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    width: 100%;
-    position: relative;
-}
-
-#remotemedia-browser .header {
-    border-bottom: 1px solid #555;
-}
-
-
-#remotemedia-scaler .body, #remotemedia-browser .body {
-    clear: both;
-}
-
-#remotemedia-browser input {
-    border-radius: 10px;
-    margin: 0;
-    padding: 3px 7px;
-    border: 0;
-    height: 18px;
-    font-size: 12px;
-}
-
-#remotemedia-browser input:focus {
-    outline: none;
-}
-
-#remotemedia-browser button.search {
-    border: 0;
-    border-radius: 10px;
-    padding: 0 12px;
-    font: normal 12px/20px Helvetica, Arial, sans-serif;
-    height: 24px;
-    background: orange;
-    margin: 0 0 0 5px;
-}
-
-@keyframes pulse {
-    0% { opacity: 0.3; }
-    50% { opacity: 0.9; }
-    100% { opacity: 0.3; }
-}
-@-webkit-keyframes pulse {
-    0% { opacity: 0.3; }
-    50% { opacity: 0.9; }
-    100% { opacity: 0.3; }
-}
-
-#remotemedia-browser button.search.working {
-    -webkit-animation: pulse 3s infinite ease-in-out;
-    animation: pulse 3s infinite ease-in-out;
-}
-
-#remotemedia-browser button.search {
-    border: 0;
-    border-radius: 10px;
-    padding: 0 12px;
-    font: normal 12px/20px Helvetica, Arial, sans-serif;
-    height: 24px;
-    background: orange;
-    margin: 0 0 0 5px;
-}
-
-#remotemedia-browser a {
-    color: #fff;
-    text-decoration: none;
-}
-
-#remotemedia-browser .prev, #remotemedia-browser .next { display: none; }
-
-
-/* Browse media */
-
-#remotemedia-browser .item {
-    float: left;
-    width: 180px;
-    height: 120px;
-    border-right: 1px solid #333;
-    border-bottom: 1px solid #333;
-    padding: 3px;
-    position: relative;
-    overflow: hidden;
-}
-
-    #remotemedia-browser .item:first-child {
-        border-left: 1px solid #333;
-    }
-
-#remotemedia-browser .item .pick {
-    text-align: center;
-    width: 180px;
-    height: 120px;
-    /* background: url(loader.gif) center center no-repeat; */
-    vertical-align: middle;
-    display: table-cell;
-}
-
-
-#remotemedia-browser .item img {
-    margin: 0;
-    background-image: url("/extension/remotemedia/design/standard/images/transparent-background.png");
-}
-#remotemedia-browser .item:hover .meta {
-    display:-moz-box;
-    -moz-box-orient:horizontal;
-    -moz-box-pack:center;
-    -moz-box-align:center;
-
-    display:-webkit-box;
-    -webkit-box-orient:horizontal;
-    -webkit-box-pack:center;
-    -webkit-box-align:center;
-
-    display:box;
-    box-orient:horizontal;
-    box-pack:center;
-    box-align:center;
-}
-#remotemedia-browser .item .meta {
-    display: none;
-    bottom: 0;
-    left: 0;
-    top: 0;
-    right: 0;
-    padding: 0 10px;
-    margin: 0;
-    background: #000;
-    opacity: 0.7;
-    position: absolute;
-    color: #fff;
-    font: normal 12px/18px Helvetica, Arial, sans-serif;
-}
-
-
-
-
-
-/* Scale and crop media */
-
-#remotemedia-scaler .header ul {
-    list-style-type: none;
-    margin: 0;
-    float: left;
-}
-#remotemedia-scaler .header ul li {
-    float: left;
-    margin-right: 8px;
-}
-
-#remotemedia-scaler .header ul li a {
+    right: 10px; }
+  #remotemedia-modal .form-search {
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #555; }
+    #remotemedia-modal .form-search .btn {
+      box-shadow: none;
+      line-height: 16px; }
+  #remotemedia-modal .remotemedia-thumbs .item img {
+    border: none; }
+  #remotemedia-modal .remotemedia-thumbs .pick {
+    color: rgba(255, 255, 255, 0.75);
+    text-decoration: none; }
+  #remotemedia-modal .load-more {
     display: block;
-    float: left;
-    background: #fff;
-    border-radius: 4px;
-    height: 30px;
-    padding: 3px 15px 0 3px;
-    font: normal 11px/11px Helvetica, Arial, sans-serif;
-    text-decoration: none;
-    color: #000;
-    border: 1px dotted transparent;
-}
+    width: 100%;
+    margin-top: 40px;
+    box-shadow: none;
+    line-height: 16px; }
+  #remotemedia-modal .loader.icon-16 {
+    height: 16px;
+    width: 16px;
+    max-width: 16px; }
+  #remotemedia-modal .well {
+    color: #fff; }
 
-#remotemedia-scaler .header ul li a p {
-    margin-right: 6px;
-    border: 1px solid #000;
-    border-radius: 2px;
-    float: left;
-}
-
-#remotemedia-scaler .header ul li a h2 {
-    display: inline;
-    margin: 0;
-    font: bold 12px/14px Helvetica, Arial, sans-serif;
-}
-
-#remotemedia-scaler .header ul li a span {
-    display: inline;
-    font: normal 10px/10px Helvetica, Arial, sans-serif;
-}
-
-#remotemedia-scaler .header ul li.uncropped a {
-    background: transparent;
-    border-color: #ccc;
-    color: #ccc;
-}
-
-#remotemedia-scaler .header ul li.uncropped a p {
-    border: 1px dotted #ccc;
-}
-
-
-#remotemedia-scaler .header ul li.uncropped a:hover {
-    border-color: #fff;
-    color: #fff;
-}
-
-#remotemedia-scaler .header ul li.uncropped a:hover p {
-    border: 1px dotted #fff;
-}
-
-
-#remotemedia-scaler .header ul li.cropped a:hover {
-    background: #fff60b;
-}
-
-#remotemedia-scaler .header ul li.active a, #remotemedia-scaler .header ul li.active a:hover {
-    background-color: #ffbb00;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#ffbb00), to(#ff8d00));
-    background-image: -webkit-linear-gradient(top, #ffbb00, #ff8d00);
-    background-image: -moz-linear-gradient(top, #ffbb00, #ff8d00);
-    background-image: -ms-linear-gradient(top, #ffbb00, #ff8d00);
-    background-image: -o-linear-gradient(top, #ffbb00, #ff8d00);
-    background-image: linear-gradient(top, #ffbb00, #ff8d00);
-    color: #000;
-    border-color: transparent;
-}
-
-
-#remotemedia-scaler .header ul li:hover .overlay { display: block; opacity:1; }
-#remotemedia-scaler .header ul li.active:hover .overlay,
-#remotemedia-scaler .header ul li.uncropped:hover .overlay { display: none; }
-
-#remotemedia-scaler .overlay {
-    display: none;
-    opacity: 0;
-    position: absolute;
-    z-index: 700;
-    border: 1px solid #fff60b;
-    -webkit-transition: opacity 0.1s ease;
-    -moz-transition: opacity 0.1s ease;
-    -o-transition: opacity 0.1s ease;
-    transition: opacity 0.1s ease;
-}
-
-#remotemedia-scaler .header ul li.active .overlay { border-color: #000; }
-
-
-
-#remotemedia-scaler-image {
-    margin: 0 auto;
-    text-align: center;
-}
-
-/* Override jCrop */
-
-#remotemedia-scaler .jcrop-handle {
-	font-size: 1px;
-	width: 16px !important;
-	height: 16px !important;
-	border: 1px #eee solid;
-	background-color: #fff;
-	border-radius: 4px
-}
+/*# sourceMappingURL=ngremotemedia.css.map */
