--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
@@ -99,6 +99,8 @@
   .loader {
     &.icon-16 {height: 16px; width: 16px; max-width: 16px; vertical-align:middle;}
   }
-  .form-search .loader{margin:0px 10px 0px -24px;}
   .well {color: #fff;}
 }
+
+.eze-modal-content .form-search .loader,
+#remotemedia-modal .form-search .loader{margin:0px 10px 0px -24px;}
