Javascript: Online editor

--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
@@ -104,3 +104,6 @@
 
 .eze-modal-content .form-search .loader,
 #remotemedia-modal .form-search .loader{margin:0px 10px 0px -24px;}
+
+
+.o2k7Skin .mceIcon.mce_remotemedia{background: url(Pictures-alt-2b.png) no-repeat 0 0;}
