Javascript: Online editor, optimization, bug fixes, cleanup

--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
@@ -53,7 +53,6 @@
 
 }
 
-
 // Remote media thumbs 
 .remotemedia-thumbs {clear: both; display: table;
   .item {float: left; width: 100%; max-width: 180px; cursor: pointer;
@@ -106,4 +105,4 @@
 #remotemedia-modal .form-search .loader{margin:0px 10px 0px -24px;}
 
 
-.o2k7Skin .mceIcon.mce_remotemedia{background: url(Pictures-alt-2b.png) no-repeat 0 0;}
+.o2k7Skin .mceIcon.mce_remotemedia{background: url(remotemedia.svg) no-repeat 50% 50%;}
