--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
@@ -272,6 +272,4 @@
   margin: 0px 10px 0px -24px; }
 
 .o2k7Skin .mceIcon.mce_remotemedia {
-  background: url(Pictures-alt-2b.png) no-repeat 0 0; }
-
-/*# sourceMappingURL=ngremotemedia.css.map */
+  background: url(remotemedia.svg) no-repeat 50% 50%; }
