Javascript: Online editor

--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.css
@@ -272,4 +272,6 @@
   margin: 0px 10px 0px -24px; }
 
 .o2k7Skin .mceIcon.mce_remotemedia {
-  background: url(remotemedia.svg) no-repeat 50% 50%; }
+  background: url(./remotemedia.svg) no-repeat 50% 50%; }
+
+/*# sourceMappingURL=ngremotemedia.css.map */
