--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
@@ -105,4 +105,4 @@
 #remotemedia-modal .form-search .loader{margin:0px 10px 0px -24px;}
 
 
-.o2k7Skin .mceIcon.mce_remotemedia{background: url(remotemedia.svg) no-repeat 50% 50%;}
+.o2k7Skin .mceIcon.mce_remotemedia{background: url(./remotemedia.svg) no-repeat 50% 50%;}
