--- a/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
+++ b/ezpublish_legacy/ngremotemedia/design/standard/stylesheets/ngremotemedia.scss
@@ -1,5 +1,6 @@
 @import "mixins.sass";
 
+
 /*********************
   EzExceed & admin 
 **********************/
@@ -80,6 +81,7 @@
 // remote media admin
 #remotemedia-modal {position: fixed; height: 100%; width: 100%; z-index: 1000;
   .backdrop { z-index: 100000; position: absolute; top: 0; bottom: 0; left: 0; right: 0; background: #fff; opacity: 0.6; }
+
   .content { position: absolute; top: 50px; bottom: 25px; z-index: 200000; padding: 40px; border-radius: 4px; width: 920px; left: 50%; margin-left: -460px; background-color: #000; font: normal 14px/14px Helvetica, Arial, sans-serif; }
   .in{overflow: auto; position: absolute; top:50px; left:40px; right:40px; bottom:25px;}
   .close { background: #fff url(close.png) center center no-repeat; height: 20px; width: 20px; border: 0; border-radius: 20px; text-indent: -99999px; position: absolute; top: 10px; right: 10px; }
@@ -104,5 +106,8 @@
 .eze-modal-content .form-search .loader,
 #remotemedia-modal .form-search .loader{margin:0px 10px 0px -24px;}
 
+#remotemedia-modal, .eze{
+  .upload-backdrop{background:#000 url(./remotemedia_upload.svg) no-repeat 50% 50%; z-index: 100000; position: absolute; top: 0; bottom: 0; left: 0; right: 0; opacity:0.8;} 
+}
 
 .o2k7Skin .mceIcon.mce_remotemedia{background: url(./remotemedia.svg) no-repeat 50% 50%;}
