Javascript: Cleanup, finalization

--- a/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/item.hbs
+++ b/ezpublish_legacy/ngremotemedia/design/standard/javascript/templates/item.hbs
@@ -1,6 +1,6 @@
 <div class="item">
     <a class="pick" data-id="{{id}}">
-        <img src="{{thumb.url}}" />
+        <img src="{{url}}" />
         <p class="meta">{{filename}}<br />
             <span class="details">{{width}} x {{height}}</span>
             {{#if shared}}
